# VPNrel

./: CMakeLists.txt  README.md  department.csv  employee.csv  main.cpp
UML/: full_uml.puml
include/core/encryption/: encryption.hpp  key_manager.hpp
include/core/network/: socket_handler.hpp  tunnel_manager.hpp
include/core/packet/: message_types.hpp  packet_handler.hpp
include/system/client/: vpn_client.hpp
include/system/server/: client_handler.hpp  vpn_server.hpp
include/utils/config/: config.hpp
include/utils/logger/: logger.hpp
include/utils/tester/: tester.hpp
src/core/encryption/: encryption.cpp  key_manager.cpp
src/core/network/: socket_handler.cpp  tunnel_manager.cpp
src/core/packet/: packet_handler.cpp
src/system/client/: vpn_client.cpp
src/system/server/: client_handler.cpp  vpn_server.cpp
src/utils/config/: config.cpp
src/utils/logger/: logger.cpp
src/utils/tester/: tester.cpp
tests/: test_client.cpp  test_encryption.cpp  test_multi_client.cpp  test_server.cpp  test_vpn_client.cpp  test_vpn_server.cpp
